<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@drawable/m">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="245dp"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Acerca_de"
                android:textColor="#ffffff"
                android:textSize="12dp"
                android:layout_marginTop="35dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TheBets"
                android:textSize="12dp"
                android:gravity="center"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cred"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_marginTop="30dp"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/UTNG"
                android:textSize="12dp"
                android:gravity="center"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fot"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_marginTop="30dp"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mdvi"
                android:textSize="12dp"
                android:gravity="center"
                android:textColor="#ffffff"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ver"
                android:gravity="center"
                android:textSize="10dp"
                android:layout_marginTop="70dp"
                android:textColor="#ffffff"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>